--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -110,13 +110,14 @@
   "continue": "Continue",
   "error": "Error",
   "delete": "Delete",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Delete message",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Delete Messages",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "From:",
   "to": "To:",
   "sent": "Sent",
@@ -125,14 +126,6 @@
   "groupMembers": "Group members",
   "moreInformation": "More information",
   "resend": "Resend",
-  "deleteMessage": "Delete Message",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Delete Messages",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -440,10 +433,6 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
   "incomingCall": "Incoming call",
