incoming call dialog show avatar + caller name

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -435,7 +435,7 @@
   "notificationSubtitle": "Notifications - $setting$",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "incomingCallFrom": "Incoming call from '$name$'",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
