Saving logs to desktop.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -140,6 +140,7 @@
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Save",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "General",
