add a ringing and establishing connection label video calls

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -436,6 +436,8 @@
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
   "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
