Adding blocking of individual requests and syncing of block to devices. Added approval by replying to a message.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -443,5 +443,9 @@
   "messageDeletedPlaceholder": "This message has been deleted",
   "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey"
+  "goToOurSurvey": "Go to our survey",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceHolder": "No requests"
 }
