fixed typos for translations and method name.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -447,5 +447,5 @@
   "blockAll": "Block All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
-  "requestsPlaceHolder": "No requests"
+  "requestsPlaceholder": "No requests"
 }
