Adding improvements to message request handling.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -447,5 +447,6 @@
   "blockAll": "Block All",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
-  "requestsPlaceholder": "No requests"
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox"
 }
